@@ -1,16 +1,12 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
 #
-# https://puppet.com/docs/pe/2017.3/overview/component_versions_in_recent_pe_releases.html
+# https://puppet.com/docs/pe/latest/overview/component_versions_in_recent_pe_releases.html
 # https://puppet.com/misc/puppet-enterprise-lifecycle
-# https://puppet.com/docs/pe/2017.3/overview/getting_support_for_pe.html#standard-releases-and-long-term-support-releases
+# https://puppet.com/docs/pe/latest/overview/getting_support_for_pe.html#standard-releases-and-long-term-support-releases
 # ------------------------------------------------------------------------------
-#  release    pup   ruby   eol
-# PE 2016.4   4.7   2.1.9  2018-10 (LTS)***
-# SIMP 6.0    4.8   2.1.9  TBD***
-# SIMP 6.2    4.10  2.1.9  TBD
-# PE 2017.2   4.10  2.1.9  2018-02
-# PE 2017.3   5.3   2.4.1  2018-08
-# PE 2018.1   5.5   2.4.1  2020-05 (LTS)
+# release     pup     ruby   eol
+# PE 2018.4   5.5.6   2.4.4  2020-05 (LTS)
+# SIMP 6.3    5.5.7   2.4.4
 #
 # *** = Modules created for SIMP 6.2+ are not required to support Puppet < 4.10
 ---
@@ -58,10 +54,10 @@ variables:
 
 # Puppet + testing environments
 # --------------------------------------
-.pup_4_10_0: &pup_4_10_0
+.pup_4_10_X: &pup_4_10_X
   image: 'ruby:2.1'
   variables:
-    PUPPET_VERSION: '~> 4.10.0'
+    PUPPET_VERSION: '~> 4.10.4'
     MATRIX_RUBY_VERSION: '2.1'
 
 .pup_4_latest: &pup_4_latest
@@ -70,17 +66,17 @@ variables:
     PUPPET_VERSION: '~> 4.0'
     MATRIX_RUBY_VERSION: '2.1'
 
-.pup_5_3_2: &pup_5_3_2
+.pup_5_5_6: &pup_5_5_6
   image: 'ruby:2.4'
   variables:
-    PUPPET_VERSION: '~> 5.3.2'
+    PUPPET_VERSION: '5.5.6'
     BEAKER_PUPPET_COLLECTION: 'puppet5'
     MATRIX_RUBY_VERSION: '2.4'
 
-.pup_5_5_1: &pup_5_5_1
+.pup_5_5_7: &pup_5_5_7
   image: 'ruby:2.4'
   variables:
-    PUPPET_VERSION: '~> 5.5.1'
+    PUPPET_VERSION: '5.5.7'
     BEAKER_PUPPET_COLLECTION: 'puppet5'
     MATRIX_RUBY_VERSION: '2.4'
 
@@ -122,7 +118,7 @@ variables:
 #=======================================================================
 
 sanity_checks:
-  <<: *pup_4_latest
+  <<: *pup_5_latest
   <<: *setup_bundler_env
   stage: 'sanity'
   tags: ['docker']
@@ -141,57 +137,54 @@ pup5-lint:
   <<: *pup_5_latest
   <<: *lint_tests
 
-
 pup4.10-unit:
-  <<: *pup_4_10_0
+  <<: *pup_4_10_X
   <<: *unit_tests
 
 pup5.3-unit:
-  <<: *pup_5_3_2
+  <<: *pup_5_5_6
   <<: *unit_tests
 
 pup5.5-unit:
-  <<: *pup_5_5_1
+  <<: *pup_5_5_7
   <<: *unit_tests
 
 pup5.latest-unit:
   <<: *pup_5_latest
   <<: *unit_tests
 
-
 pup4.10-acceptance:
-  <<: *pup_4_10_0
+  <<: *pup_4_10_X
   <<: *acceptance_base
   script:
     - 'bundle exec rake beaker:suites'
 
 pup4.10-fips-acceptance:
-  <<: *pup_4_10_0
+  <<: *pup_4_10_X
   <<: *acceptance_base
   script:
     - 'BEAKER_fips=yes bundle exec rake beaker:suites'
 
 pup5.5-acceptance:
-  <<: *pup_5_5_1
+  <<: *pup_5_5_7
   <<: *acceptance_base
   script:
     - 'bundle exec rake beaker:suites'
 
-pup5.5-acceptance-oel:
-  <<: *pup_5_5_1
-  <<: *acceptance_base
-  script:
-    - 'bundle exec rake beaker:suites[default,oel]'
-
 pup5.5-fips-acceptance:
-  <<: *pup_5_5_1
+  <<: *pup_5_5_7
   <<: *acceptance_base
   script:
     - 'BEAKER_fips=yes bundle exec rake beaker:suites'
 
-pup5.5-fips-compliance:
-  <<: *pup_5_5_1
-  <<: *compliance_base
-  allow_failure: yes
+pup5.5-oel-acceptance:
+  <<: *pup_5_5_7
+  <<: *acceptance_base
   script:
-    - 'BEAKER_fips=yes bundle exec rake beaker:suites[compliance,ALL]'
+    - 'bundle exec rake beaker:suites[default,oel]'
+
+pup5.5-fips-compliance:
+  <<: *pup_5_5_7
+  <<: *compliance_base
+  script:
+    - 'BEAKER_fips=yes bundle exec rake beaker:suites[compliance]'
